--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
@@ -8,18 +8,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-startup-image" href="~/content/img/ios/Icon-512.png">
-  <link rel="apple-touch-icon" href="~/content/img/ios/Icon-16.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="~/content/img/ios/Icon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="~/content/img/ios/Icon-180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="~/content/img/ios/Icon-167.png">
+  <link rel="apple-touch-startup-image" href="content/icons/ios/Icon-512.png">
+  <link rel="apple-touch-icon" href="content/icons/ios/Icon-16.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="content/icons/ios/Icon-152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="content/icons/ios/Icon-180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="content/icons/ios/Icon-167.png">
   <!--TODO: review icons, add png instead of ico, see formats for other mobiles-->
-  <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
-  
-    <style>
-        a { cursor: pointer }
-    </style>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
   <app-root>Loading...</app-root>
