--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
@@ -8,14 +8,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-startup-image" href="content/icons/ios/Icon-512.png">
   <link rel="apple-touch-icon" href="content/icons/ios/Icon-16.png">
+<!--   <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png"> 
   <link rel="apple-touch-icon" sizes="152x152" href="content/icons/ios/Icon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="content/icons/ios/Icon-180.png">
   <link rel="apple-touch-icon" sizes="167x167" href="content/icons/ios/Icon-167.png">
-  <!--TODO: review icons, add png instead of ico, see formats for other mobiles-->
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="content/icons/ios/Icon-180.png">
+  <link rel="apple-touch-startup-image" href="content/icons/ios/Icon-512.png">
+  <meta name="theme-color" content="#ffffff">
+   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+ -->
+ <link rel="apple-touch-icon" sizes="57x57" href="content/icons/apple-icon-57x57.png">
+ <link rel="apple-touch-icon" sizes="60x60" href="content/icons/apple-icon-60x60.png">
+ <link rel="apple-touch-icon" sizes="72x72" href="content/icons/apple-icon-72x72.png">
+ <link rel="apple-touch-icon" sizes="76x76" href="content/icons/apple-icon-76x76.png">
+ <link rel="apple-touch-icon" sizes="114x114" href="content/icons/apple-icon-114x114.png">
+ <link rel="apple-touch-icon" sizes="120x120" href="content/icons/apple-icon-120x120.png">
+ <link rel="apple-touch-icon" sizes="144x144" href="content/icons/apple-icon-144x144.png">
+ <link rel="apple-touch-icon" sizes="152x152" href="content/icons/apple-icon-152x152.png">
+ <link rel="apple-touch-icon" sizes="180x180" href="content/icons/apple-icon-180x180.png">
+ <link rel="icon" type="image/png" sizes="192x192"  href="content/icons/android-icon-192x192.png">
+ <link rel="icon" type="image/png" sizes="32x32" href="content/icons/favicon-32x32.png">
+ <link rel="icon" type="image/png" sizes="96x96" href="content/icons/favicon-96x96.png">
+ <link rel="icon" type="image/png" sizes="16x16" href="content/icons/favicon-16x16.png">
 </head>
 <body>
   <app-root>Loading...</app-root>
