--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
@@ -25,6 +25,7 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
  -->
+ <link rel="apple-touch-startup-image" href="content/icons/icon-512x512.png">
  <link rel="apple-touch-icon" sizes="57x57" href="content/icons/icon-57x57.png">
  <link rel="apple-touch-icon" sizes="60x60" href="content/icons/icon-60x60.png">
  <link rel="apple-touch-icon" sizes="72x72" href="content/icons/icon-72x72.png">
