#70054 - New type of CaseBinding, update case with ExtCase value only if ExtCase value changed

--- a/ExtendedCase/ExtendedCase.Web/src/Test.html
+++ b/ExtendedCase/ExtendedCase.Web/src/Test.html
@@ -9,7 +9,7 @@
     <script src="/iframeresizer.js"></script>
 </head>
 <body>
-<iframe id="extendedCaseFrame" src="http://localhost:8099/?formId=1" width="100%" scrolling="no"></iframe>
+<iframe id="extendedCaseFrame" src="http://localhost:8099/?formId=1&languageId=1" width="100%" scrolling="no"></iframe>
 
 <br />
 <div>
