--- a/ExtendedCase/ExtendedCase.Web/src/index.html
+++ b/ExtendedCase/ExtendedCase.Web/src/index.html
@@ -5,9 +5,9 @@
     <title>Extended Case Web</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/ecpolyfillscore.${HASH}.js"></script>
-	<script src="/ecpolyfills.${HASH}.js"></script>
-	<script src="/iframeResizer.contentWindow.min.js"></script>	
+    <script src="ecpolyfillscore.${HASH}.js"></script>
+	<script src="ecpolyfills.${HASH}.js"></script>
+	<script src="iframeResizer.contentWindow.min.js"></script>	
 	<style>
 	 .version{color:#fff}
 	</style>
@@ -15,7 +15,7 @@
 <body>
     <div style="padding: 0px !important">
 		<extended-case></extended-case>
-		<script src="/ecapp.${HASH}.js"></script>
+		<script src="ecapp.${HASH}.js"></script>
         <span class="version">${VERSION}</span>
     </div>
     <script type="text/javascript">
