--- a/ExtendedCase/ExtendedCase.Web/src/index.html
+++ b/ExtendedCase/ExtendedCase.Web/src/index.html
@@ -4,6 +4,7 @@
     <base href="${BASE_URL}">
     <title>Extended Case Web</title>
     <meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="ecpolyfillscore.${HASH}.js"></script>
 	<script src="ecpolyfills.${HASH}.js"></script>
