index.html edited online with Bitbucket

--- a/ExtendedCase/ExtendedCase.Web/src/index.html
+++ b/ExtendedCase/ExtendedCase.Web/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="${BASE_URL}">
+    <base href="#{BASE_URL}">
     <title>Extended Case Web</title>
     <meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="ecpolyfillscore.${HASH}.js"></script>
-	<script src="ecpolyfills.${HASH}.js"></script>
+    <script src="ecpolyfillscore.#{HASH}.js"></script>
+	<script src="ecpolyfills.#{HASH}.js"></script>
 	<script src="iframeResizer.contentWindow.min.js"></script>	
 	<style>
 	 .version{color:#fff}
@@ -17,7 +17,7 @@
     <div style="padding: 0px !important">
 		<extended-case></extended-case>
 		<script src="ecapp.${HASH}.js"></script>
-        <span class="version">${VERSION}</span>
+        <span class="version">#{VERSION}</span>
     </div>
     <script type="text/javascript">
 
