index.html edited online with Bitbucket

--- a/ExtendedCase/ExtendedCase.Web/src/index.html
+++ b/ExtendedCase/ExtendedCase.Web/src/index.html
@@ -16,7 +16,7 @@
 <body>
     <div style="padding: 0px !important">
 		<extended-case></extended-case>
-		<script src="ecapp.${HASH}.js"></script>
+		<script src="ecapp.#{HASH}.js"></script>
         <span class="version">#{VERSION}</span>
     </div>
     <script type="text/javascript">
