--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>DH Helpdesk</title>
-  <base href="#{BaseHref}">
+  <base href=".">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -95,7 +95,7 @@
         
           Loading<span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
   </app-root>
-  <script defer src="ecpolyfills.#{HASH}.js"></script>
-  <script async defer src="ecapp.#{HASH}.js"></script>
+  <script defer src="ecpolyfills.ec0322a69ffc60b89b0c.js"></script>
+  <script async defer src="ecapp.ec0322a69ffc60b89b0c.js"></script>
 </body>
 </html>
