--- a/ExtendedCase/ExtendedCase.Web/src/index.html
+++ b/ExtendedCase/ExtendedCase.Web/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="#{BASE_URL}">
+    <base href="/extendedcase/">
     <title>Extended Case Web</title>
     <meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
